--- a/css/layout.css
+++ b/css/layout.css
@@ -1,23 +1,18 @@
-*{
-    
-    display: flex;
-    flex-direction: column;
-}
 .container{
     display: flex;
     flex-direction: column;
     background-color: black;
-    margin-top: 10rem;
+    margin-top: 40rem;
     z-index: -2;
 }
-.content-container{
+ .content-container{
     display: flex;
     flex-direction: column;
     flex-wrap: column wrap;
     padding: 1rem;
     margin: 1rem;
     background-color: white;
-}
+} 
 .grid-item-1{
     display: grid;
     grid-template-columns: repeat(2, 1fr);
@@ -65,6 +60,7 @@
     justify-content: space-around;
     align-items: center;
 }
+/*
 .title{
     display: flex;
     flex-direction: row;
@@ -140,7 +136,7 @@
     float: right;
     padding: 50px 50px;
     position: relative;   
-}
+} 
 .menu-icon{
     border: 1px solid black;
 }
@@ -191,7 +187,7 @@
 .header .menu-btn:checked ~ .menu-icon:not(.steps) .navicon:before,
 .header .menu-btn:checked ~ .menu-icon:not(.steps) .navicon:after {
   top: 0;
-}
+} */
 
 
   
