--- a/css/header.css
+++ b/css/header.css
@@ -4,11 +4,12 @@ header {
     background: url('../img/boardroom.jpg');
 	text-align: center;
 	width: 100%;
-	height: 525px;
+	height: 555px;
 	background-size: cover;
 	background-attachment: fixed;
-	position: relative;
+	position: fixed;
 	overflow: hidden;
+	box-shadow: 0 2px 4px 0 lightgray;
     
     
 }
@@ -32,7 +33,7 @@ h3, p {
 	font-family: 'Open Sans', sans-serif;
 	margin-bottom: 30px;
 }
-
+/*
 button {
 	border: none;
 	outline: none;
@@ -45,4 +46,4 @@ button {
 }
 button:hover{
 	cursor: pointer;
-}
+}*/
