--- a/css/layout-2.css
+++ b/css/layout-2.css
@@ -1,28 +1,150 @@
 .body-container{
     position: relative;
-    border: 10px dashed violet;
+    top:40rem;
+    z-index: 1;
+
 }
 .container{
-    border: 4px solid red;
     z-index: 50px;
     background-color: white;
+    width: 100%;
     margin-bottom: 3.3rem;
     padding-bottom: 2rem;
 }
+ol{
+    text-decoration: none;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
 .nav{
     position: fixed;
     width: 100%;
+    bottom: 0;
     padding: 2rem 0 2rem 0;
-    border: 4px solid blue;
-    background-color: black;
-    color: white;
-    z-index: 1;
+    background-color: white;
+    color: black;
+    z-index: 10;
+    border-top: 4px solid black;
 }
 .nav ol{
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
+    align-items: center;
 }
-footer{
-    z-index: 10;
+
+.nav ol img:hover{
+    transform: scale(3);
 }
+.nav ol img{
+    width:30px;
+    height: 30px;
+}
+.flex-item-1{
+    display: flex;
+    flex-direction: row;
+}
+.flex-3{
+    display: flex;
+    flex-direction: column; 
+    margin: 1rem;
+    padding: .5rem;
+    
+}
+.flex-3 h1{
+    display: flex;
+    justify-content: center;
+    font-stretch: semi-expanded;
+}
+.flex-3 p{
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    line-height: 2rem;
+}
+.flex-3 li {
+    list-style: square;
+}
+.flex-3 h3{
+    display: flex;
+    padding: 1rem;
+    justify-content: center;
+    align-items: center;
+    font-size: 30px;
+}
+.flex-4{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center
+}
+.flex-5{
+    display: flex;
+    flex-direction: row;
+    margin:1rem;
+    background: white;
+    width: 100%;
+}
+.flex-6{
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    margin:1rem;
+    background: white;
+    justify-content: space-evenly;
+}
+
+.flex-2 {
+    background-image: url('../img/desk.jpeg');
+    width: 100%;
+    height: 555px;
+    max-height: 100%;
+    text-align: center;
+    margin: 0;
+    padding: 0;
+    background-size:cover;
+    background-repeat: no-repeat;
+    color: black;
+    z-index: 100;
+}
+.hero-text{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: flex-start;
+}
+#buttonselect{
+    align-self: center;
+    margin-bottom: .5rem; 
+}
+.flex-7{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-items: space-between;
+
+}
+.pro-1{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 0 1rem;
+    padding: 2rem 2rem;
+}
+.pro-1 h3{
+    padding-top: 3rem;
+}
+.icons{
+    width: 150px;
+    height: 150px;
+}
+.icons:hover{
+    transform: scale(1.3);
+}
+
+ 
+  
