--- a/css/layout.css
+++ b/css/layout.css
@@ -1,24 +1,42 @@
 .container{
     display: flex;
     flex-direction: column;
-    background-color: black;
-    margin-top: 40rem;
+    background-color: #fff;
+    margin-top: 0;
     z-index: -2;
+    width: 100%;
 }
  .content-container{
+     width: 100%;
     display: flex;
     flex-direction: column;
     flex-wrap: column wrap;
+    padding: 3rem 0;
+    margin: 1rem; 
+    background-color: white;
+} 
+.content-container-2{
+    display: flex;
+    flex-direction: row;
     padding: 1rem;
     margin: 1rem;
     background-color: white;
+    width: 100%;
 } 
-.grid-item-1{
+.heading{
+    display: flex;
+    align-content: center;
+    width: 100%;
+    padding: 2rem;
+    background-color: white;
+}
+/*.grid-item-1{
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     padding: 5rem 0;
     margin: 1rem 0;
-}
+    background-color: white;
+}*/
 .content-container p{
     font-size: 18px;
     line-height: 22px;
@@ -37,157 +55,52 @@
     justify-content: center;
     align-items: center;
     background-color: white;
+    width: 100%;
 }
 .flex-item-6{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    border: 2px solid black;
     background-color: white;
+    width: 100%;
 }
 .flex-item-4{
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: flex-end;
+    align-items: flex-start;
     padding: 1rem 2rem 1rem 0;
     margin: 1rem 0;
     background-color: white;
+    width: 100%;
 }
 .footer{
     display: flex;
     flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    padding: 1rem;
+}
+footer{
+    background-image: url('../img/desk.jpeg');
+    background-size: cover;
+    width: 100%;
+	height: 300px;
+	overflow: hidden;
+	box-shadow: 0 2px 4px 0 lightgray;
+    background-repeat: no-repeat;
     justify-content: space-around;
     align-items: center;
 }
-/*
-.title{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    font-family: 'Rakkas', cursive;
-    padding-right: 10rem;
-    line-height: 70px;
-    background-color: white;
+ .overlay{
+	width: 100%;
+	height: 300px;
+	padding: 50px;
+	color: #FFF;
+	text-shadow: 1px 1px 1px #333;
+  background-image: linear-gradient( 135deg, #16a30469 10%, rgba(252, 227, 0, 0.534) 100%);
 }
-.trans-letters{
-    background: url("../img/space.jpg");
-    color: red;
-    -webkit-text-fill-color: transparent;
-    -webkit-background-clip: text;
-    font-size: 70px;
-    font-weight: bold;
-}
-.logo{
-    width: 100px;
-    height: 100px;
-    padding: .3rem;
-    margin-left: 1rem;
-    margin-top:.3rem;
-}
-
-.header{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    background: #fff;
-    box-shadow: 2px 2px 6px 0 gray;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    z-index: 999;
-}
-.header ul {
-    margin: 0;
-    padding: 0;
-    list-style: none;
-    overflow: hidden;
-}
-.menu ul{
-    background-color: blue;
-}
-.header .menu li a{
-    display: block;
-    padding: 20px 20px;
-    text-decoration: none;
-    border-right: 1px solid black;
-    font-size: 20px;
-}
-.header .logo {
-    display: block;
-    float: left;
-    font-size: 2em;
-    padding: 10px 20px;
-    text-decoration: none;
-  }
-.header li a:hover, .header .menu-btn:hover{
-    background-color: black;
-}
-.header .menu {
-    clear: both;
-    max-height: 0;
-    background-color: white;
-    transition: max-height .2s ease-out;
-}
-.header .menu-icon {
-    cursor: pointer;
-    float: right;
-    padding: 50px 50px;
-    position: relative;   
-} 
-.menu-icon{
-    border: 1px solid black;
-}
-
-.header .menu-icon .nav-icon{
-    background: #333333;
-    display:block;
-    height: 6px;
-    margin: 7px;
-    position: relative;
-    transition:   .2s ease-out;
-    width: 50px;
-    margin: 1rem;
-}
-.header .menu-icon .nav-icon:before, 
-.header .menu-icon .nav-icon:after{
-    background: #333;
-    content: '';
-    display: block;
-    height: 100%;
-    position: absolute;
-    transition:  all .2s ease-out;
-    width: 100%;
-}
-.header .menu-icon .nav-icon:before {
-    top: 14px;
-}
-.header .menu-icon .nav-icon:after{
-    top:-14px;
-}
-.header .menu-btn {
-    display: none;
-}
-.header .menu-btn:checked ~ .menu {
-    max-height: 240px;
-    margin:1rem;
-  }
-  
-.header .menu-btn:checked ~ .menu-icon .nav-icon{
-    background: transparent;
-}
-.header .menu-btn:checked ~ .menu-icon .nav-icon:before{
-    transform: rotate(-45deg);
-}
-.header .menu-btn:checked ~ .menu-icon .nav-icon::after{
-    transform: rotate(45deg)
-}
-.header .menu-btn:checked ~ .menu-icon:not(.steps) .navicon:before,
-.header .menu-btn:checked ~ .menu-icon:not(.steps) .navicon:after {
-  top: 0;
-} */
+	
 
 
   
