--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,47 @@
 *{
     font-family: Arial, Helvetica, sans-serif;
 }
+button{
+    background: #00000088;
+    color: rgba(255, 255, 255, 0.568);
+    border: none;
+    position: relative;
+    height: 60px;
+    font-size: 1.2rem;
+    padding: 0 2rem;
+    transition: 800ms ease all;
+    outline: none;
+}
+button a{
+    text-decoration: none;
+    color: #fff;
+}
+button a:hover{
+    color: rgba(0, 0, 0, 0.568);
+}
+button:hover{
+    background: rgba(255, 255, 255, 0.582);
+    color:rgba(0, 0, 0, 0.712);
+    transform: scale(1.5);
+}
+button:before, button:after{
+    content: '';
+    position: absolute;
+    top: 0 ;
+    right: 0;
+    height: 2px;
+    width: 0;
+    background: #33fd00;
+    transition: 400ms ease all;
+}
+button:after{
+    right: inherit;
+    top: inherit;
+    left: 0;
+    bottom: 0;
+    
+}
+button:hover:before, button:hover::after{
+    width: 100%;
+    transition: 800ms ease all; 
+}
